Fixed margin spacing for title, intro, and about components

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 
 .title-container h1 {
   margin: 20px 0;
-  font-size: 3rem;
+  font-size: 5rem;
   font-weight: 600;
   color: #747fe0;
 }
@@ -37,7 +37,7 @@ body {
 
 .intro {
   color: #5a5d7a;
-  margin: 0 0 40px 0;
+  margin: 0 0 50px 0;
 }
 
 .intro p {
@@ -49,7 +49,7 @@ body {
 /* --- Projects Header Container --- */
 
 .projects-header-container {
-  margin: 30px 0 50px 0;
+  margin: 70px 0 70px 0;
   text-align: center;
 }
 
