--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,8 +3,8 @@
   background: #383846;
   padding: 20px;
   border-radius: 5px;
-  font-size: 1.05em;
-  line-height: 1.1em;
+  font-size: 1.1em;
+  line-height: 1.3em;
 }
 
 .indent-once {
