--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 
 .navbar {
   width: 100%;
-  height: 70px;
+  height: 100px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
